fixes z-index of variation previews. SHOP-3614

--- a/templates/NOVA/themes/base/sass/_productdetails.scss
+++ b/templates/NOVA/themes/base/sass/_productdetails.scss
@@ -94,5 +94,8 @@
 		width: 98%;
 		height: auto;
 		background: $white;
+		&:not(.show) {
+			z-index: -5;
+		}
 	}
 }
